fix(css): eliminate white gaps between wrapper sections
Replace per-edge box-shadow seam coverage with box-shadow: none
(the shadows were causing visible hairlines in Astro's rendering).

Add 2px overlap to ::before/::after pseudo-elements at all breakpoints
so adjacent section SVG triangles overlap slightly, preventing any
body background bleed-through between spotlight sections on mobile.

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -20,18 +20,7 @@
     background-image: mixins.svg-url(
       '<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,100 100,0 100,100" style="fill:#{$color};" /></svg>'
     );
-  }
-
-  &:before {
-    box-shadow:
-      inset 0 -1px 0 0 $color,
-      0 1px 0 0 $color;
-  }
-
-  &:after {
-    box-shadow:
-      inset 0 -1px 0 0 $color,
-      0 1px 0 0 $color;
+    box-shadow: none;
   }
 }
 
@@ -152,19 +141,19 @@
     background-size: 100% 100%;
     content: '';
     display: block;
-    height: functions.size(wrapper-edges, large);
+    height: calc(#{functions.size(wrapper-edges, large)} + 2px);
     position: absolute;
     width: 100%;
   }
 
   &:before {
     left: 0;
-    top: (functions.size(wrapper-edges, large) * -1);
+    top: calc(#{functions.size(wrapper-edges, large) * -1} - 1px);
   }
 
   &:after {
     @include vendor.vendor('transform', 'scaleY(-1)');
-    bottom: (functions.size(wrapper-edges, large) * -1);
+    bottom: calc(#{functions.size(wrapper-edges, large) * -1} - 1px);
     left: 0;
   }
 
@@ -281,15 +270,15 @@
 
     &:before,
     &:after {
-      height: functions.size(wrapper-edges, medium);
+      height: calc(#{functions.size(wrapper-edges, medium)} + 2px);
     }
 
     &:before {
-      top: (functions.size(wrapper-edges, medium) * -1);
+      top: calc(#{functions.size(wrapper-edges, medium) * -1} - 1px);
     }
 
     &:after {
-      bottom: (functions.size(wrapper-edges, medium) * -1);
+      bottom: calc(#{functions.size(wrapper-edges, medium) * -1} - 1px);
       left: 0;
     }
 
@@ -319,15 +308,15 @@
 
     &:before,
     &:after {
-      height: functions.size(wrapper-edges, small);
+      height: calc(#{functions.size(wrapper-edges, small)} + 2px);
     }
 
     &:before {
-      top: (functions.size(wrapper-edges, small) * -1);
+      top: calc(#{functions.size(wrapper-edges, small) * -1} - 1px);
     }
 
     &:after {
-      bottom: (functions.size(wrapper-edges, small) * -1);
+      bottom: calc(#{functions.size(wrapper-edges, small) * -1} - 1px);
       left: 0;
     }
 
